feat: adds check and redirect for authenticated users

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+@layer utilities {
+	.container-content {
+		@apply mx-auto max-w-7xl px-4;
+	}
+}
